--- a/eda.ipynb
+++ b/eda.ipynb
@@ -922,7 +922,7 @@
     }
    ],
    "source": [
-    "\n",
+    "## Fitting the graph for room 0\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "from scipy.stats import norm, expon, lognorm, gamma, beta, weibull_min\n",
@@ -1667,7 +1667,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1877,7 +1877,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -1912,8 +1912,6 @@
        "      <th>Room 7 Area (sq. meters)</th>\n",
        "      <th>Room 8 Area (sq. meters)</th>\n",
        "      <th>Room 9 Area (sq. meters)</th>\n",
-       "      <th>Total Area</th>\n",
-       "      <th>area_valid</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -1930,8 +1928,6 @@
        "      <td>10.480957</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>6.199585</td>\n",
-       "      <td>82.265625</td>\n",
-       "      <td>x</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -1946,8 +1942,6 @@
        "      <td>17.491333</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>2.689453</td>\n",
-       "      <td>110.880615</td>\n",
-       "      <td>x</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -1962,8 +1956,6 @@
        "      <td>12.280518</td>\n",
        "      <td>12.997375</td>\n",
        "      <td>4.805420</td>\n",
-       "      <td>96.904358</td>\n",
-       "      <td>x</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -1978,8 +1970,6 @@
        "      <td>8.048584</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>4.805420</td>\n",
-       "      <td>66.331604</td>\n",
-       "      <td>x</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -1994,8 +1984,6 @@
        "      <td>13.081421</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>4.118225</td>\n",
-       "      <td>71.606689</td>\n",
-       "      <td>x</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -2030,15 +2018,15 @@
        "3                       0.0                  8.048584   \n",
        "4                       0.0                 13.081421   \n",
        "\n",
-       "   Room 8 Area (sq. meters)  Room 9 Area (sq. meters)  Total Area area_valid  \n",
-       "0                  0.000000                  6.199585   82.265625          x  \n",
-       "1                  0.000000                  2.689453  110.880615          x  \n",
-       "2                 12.997375                  4.805420   96.904358          x  \n",
-       "3                  0.000000                  4.805420   66.331604          x  \n",
-       "4                  0.000000                  4.118225   71.606689          x  "
+       "   Room 8 Area (sq. meters)  Room 9 Area (sq. meters)  \n",
+       "0                  0.000000                  6.199585  \n",
+       "1                  0.000000                  2.689453  \n",
+       "2                 12.997375                  4.805420  \n",
+       "3                  0.000000                  4.805420  \n",
+       "4                  0.000000                  4.118225  "
       ]
      },
-     "execution_count": 39,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2049,7 +2037,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -2204,7 +2192,7 @@
        "4                  0.000000                  4.118225   71.606689  "
       ]
      },
-     "execution_count": 40,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2406,7 +2394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -2426,7 +2414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2435,7 +2423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -2455,7 +2443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -2475,7 +2463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -2495,7 +2483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -2515,7 +2503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -2535,7 +2523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -2555,7 +2543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -2575,7 +2563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -2595,7 +2583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -2615,7 +2603,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -2785,7 +2773,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 23 columns</p>\n",
+       "<p>5 rows × 21 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -2838,10 +2826,10 @@
        "3         True         True  \n",
        "4         True         True  \n",
        "\n",
-       "[5 rows x 23 columns]"
+       "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 93,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2852,7 +2840,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2861,7 +2849,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -2875,6 +2863,280 @@
    "source": [
     "area_valid_count = (df['area_valid'] == True).sum()\n",
     "print(area_valid_count)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Image ID</th>\n",
+       "      <th>Room 0 Area (sq. meters)</th>\n",
+       "      <th>Room 1 Area (sq. meters)</th>\n",
+       "      <th>Room 2 Area (sq. meters)</th>\n",
+       "      <th>Room 3 Area (sq. meters)</th>\n",
+       "      <th>Room 4 Area (sq. meters)</th>\n",
+       "      <th>Room 5 Area (sq. meters)</th>\n",
+       "      <th>Room 6 Area (sq. meters)</th>\n",
+       "      <th>Room 7 Area (sq. meters)</th>\n",
+       "      <th>Room 8 Area (sq. meters)</th>\n",
+       "      <th>...</th>\n",
+       "      <th>room1_valid</th>\n",
+       "      <th>room2_valid</th>\n",
+       "      <th>room3_valid</th>\n",
+       "      <th>room4_valid</th>\n",
+       "      <th>room5_valid</th>\n",
+       "      <th>room6_valid</th>\n",
+       "      <th>room7_valid</th>\n",
+       "      <th>room8_valid</th>\n",
+       "      <th>room9_valid</th>\n",
+       "      <th>area_valid</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>40.282471</td>\n",
+       "      <td>15.721436</td>\n",
+       "      <td>4.597778</td>\n",
+       "      <td>4.983398</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>10.480957</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>...</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>51.831299</td>\n",
+       "      <td>20.507080</td>\n",
+       "      <td>5.018005</td>\n",
+       "      <td>2.185181</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>11.158264</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>17.491333</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>...</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>38.448303</td>\n",
+       "      <td>14.871094</td>\n",
+       "      <td>8.429260</td>\n",
+       "      <td>5.072388</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>12.280518</td>\n",
+       "      <td>12.997375</td>\n",
+       "      <td>...</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>28.768250</td>\n",
+       "      <td>11.093994</td>\n",
+       "      <td>3.599121</td>\n",
+       "      <td>2.442261</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>7.573975</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>8.048584</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>32.382202</td>\n",
+       "      <td>12.814453</td>\n",
+       "      <td>5.472839</td>\n",
+       "      <td>3.737549</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>13.081421</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 22 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Image ID  Room 0 Area (sq. meters)  Room 1 Area (sq. meters)  \\\n",
+       "0         0                 40.282471                 15.721436   \n",
+       "1         1                 51.831299                 20.507080   \n",
+       "2         2                 38.448303                 14.871094   \n",
+       "3         3                 28.768250                 11.093994   \n",
+       "4         4                 32.382202                 12.814453   \n",
+       "\n",
+       "   Room 2 Area (sq. meters)  Room 3 Area (sq. meters)  \\\n",
+       "0                  4.597778                  4.983398   \n",
+       "1                  5.018005                  2.185181   \n",
+       "2                  8.429260                  5.072388   \n",
+       "3                  3.599121                  2.442261   \n",
+       "4                  5.472839                  3.737549   \n",
+       "\n",
+       "   Room 4 Area (sq. meters)  Room 5 Area (sq. meters)  \\\n",
+       "0                       0.0                  0.000000   \n",
+       "1                       0.0                 11.158264   \n",
+       "2                       0.0                  0.000000   \n",
+       "3                       0.0                  7.573975   \n",
+       "4                       0.0                  0.000000   \n",
+       "\n",
+       "   Room 6 Area (sq. meters)  Room 7 Area (sq. meters)  \\\n",
+       "0                       0.0                 10.480957   \n",
+       "1                       0.0                 17.491333   \n",
+       "2                       0.0                 12.280518   \n",
+       "3                       0.0                  8.048584   \n",
+       "4                       0.0                 13.081421   \n",
+       "\n",
+       "   Room 8 Area (sq. meters)  ...  room1_valid  room2_valid  room3_valid  \\\n",
+       "0                  0.000000  ...         True        False         True   \n",
+       "1                  0.000000  ...         True        False         True   \n",
+       "2                 12.997375  ...         True         True         True   \n",
+       "3                  0.000000  ...        False        False         True   \n",
+       "4                  0.000000  ...        False        False         True   \n",
+       "\n",
+       "   room4_valid  room5_valid  room6_valid  room7_valid  room8_valid  \\\n",
+       "0         True         True         True         True         True   \n",
+       "1         True         True         True         True         True   \n",
+       "2         True         True         True         True        False   \n",
+       "3         True        False         True        False         True   \n",
+       "4         True         True         True         True         True   \n",
+       "\n",
+       "   room9_valid  area_valid  \n",
+       "0         True       False  \n",
+       "1         True       False  \n",
+       "2         True       False  \n",
+       "3         True       False  \n",
+       "4         True       False  \n",
+       "\n",
+       "[5 rows x 22 columns]"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['Image ID', 'Room 0 Area (sq. meters)', 'Room 1 Area (sq. meters)',\n",
+       "       'Room 2 Area (sq. meters)', 'Room 3 Area (sq. meters)',\n",
+       "       'Room 4 Area (sq. meters)', 'Room 5 Area (sq. meters)',\n",
+       "       'Room 6 Area (sq. meters)', 'Room 7 Area (sq. meters)',\n",
+       "       'Room 8 Area (sq. meters)', 'Room 9 Area (sq. meters)', 'room0_valid',\n",
+       "       'room1_valid', 'room2_valid', 'room3_valid', 'room4_valid',\n",
+       "       'room5_valid', 'room6_valid', 'room7_valid', 'room8_valid',\n",
+       "       'room9_valid', 'area_valid'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_csv('filtered1.csv')"
    ]
   }
  ],
