Met Guide Changes

--- a/Filtration.ipynb
+++ b/Filtration.ipynb
@@ -12,17 +12,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df1=pd.read_csv('filtered1.csv')\n",
-    "df2=pd.read_csv('filtered2.csv')"
+    "df1=pd.read_csv('filtered1new.csv')\n",
+    "df2=pd.read_csv('filtered2new.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -33,13 +33,14 @@
        "       'Room 3 Area (sq. meters)', 'Room 4 Area (sq. meters)',\n",
        "       'Room 5 Area (sq. meters)', 'Room 6 Area (sq. meters)',\n",
        "       'Room 7 Area (sq. meters)', 'Room 8 Area (sq. meters)',\n",
-       "       'Room 9 Area (sq. meters)', 'room0_valid', 'room1_valid', 'room2_valid',\n",
-       "       'room3_valid', 'room4_valid', 'room5_valid', 'room6_valid',\n",
-       "       'room7_valid', 'room8_valid', 'room9_valid', 'area_valid'],\n",
+       "       'Room 9 Area (sq. meters)', 'Total Area', 'room0_valid', 'room1_valid',\n",
+       "       'room2_valid', 'room3_valid', 'room4_valid', 'room5_valid',\n",
+       "       'room6_valid', 'room7_valid', 'room8_valid', 'room9_valid',\n",
+       "       'area_valid'],\n",
        "      dtype='object')"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -50,16 +51,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(80788, 23)"
+       "(80788, 24)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -70,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -79,7 +80,7 @@
        "(80788, 23)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -90,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,16 +100,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(80788, 45)"
+       "(80788, 46)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -119,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -130,20 +131,20 @@
        "       'Room 3 Area (sq. meters)', 'Room 4 Area (sq. meters)',\n",
        "       'Room 5 Area (sq. meters)', 'Room 6 Area (sq. meters)',\n",
        "       'Room 7 Area (sq. meters)', 'Room 8 Area (sq. meters)',\n",
-       "       'Room 9 Area (sq. meters)', 'room0_valid_x', 'room1_valid_x',\n",
-       "       'room2_valid_x', 'room3_valid_x', 'room4_valid_x', 'room5_valid_x',\n",
-       "       'room6_valid_x', 'room7_valid_x', 'room8_valid_x', 'room9_valid_x',\n",
-       "       'area_valid', 'Unnamed: 0_y', 'Room 0 minW (meters)',\n",
+       "       'Room 9 Area (sq. meters)', 'Total Area', 'room0_valid_x',\n",
+       "       'room1_valid_x', 'room2_valid_x', 'room3_valid_x', 'room4_valid_x',\n",
+       "       'room5_valid_x', 'room6_valid_x', 'room7_valid_x', 'room8_valid_x',\n",
+       "       'room9_valid_x', 'area_valid', 'Unnamed: 0_y', 'Room 0 minW (meters)',\n",
        "       'Room 1 minW (meters)', 'Room 2 minW (meters)', 'Room 3 minW (meters)',\n",
        "       'Room 4 minW (meters)', 'Room 5 minW (meters)', 'Room 6 minW (meters)',\n",
        "       'Room 7 minW (meters)', 'Room 8 minW (meters)', 'Room 9 minW (meters)',\n",
-       "       'width_valid', 'room0_valid_y', 'room1_valid_y', 'room2_valid_y',\n",
-       "       'room3_valid_y', 'room4_valid_y', 'room5_valid_y', 'room6_valid_y',\n",
-       "       'room7_valid_y', 'room8_valid_y', 'room9_valid_y'],\n",
+       "       'room0_valid_y', 'room1_valid_y', 'room2_valid_y', 'room3_valid_y',\n",
+       "       'room4_valid_y', 'room5_valid_y', 'room6_valid_y', 'room7_valid_y',\n",
+       "       'room8_valid_y', 'room9_valid_y', 'width_valid'],\n",
        "      dtype='object')"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -154,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -189,7 +190,6 @@
        "      <th>Room 6 Area (sq. meters)</th>\n",
        "      <th>Room 7 Area (sq. meters)</th>\n",
        "      <th>...</th>\n",
-       "      <th>room0_valid_y</th>\n",
        "      <th>room1_valid_y</th>\n",
        "      <th>room2_valid_y</th>\n",
        "      <th>room3_valid_y</th>\n",
@@ -199,21 +199,70 @@
        "      <th>room7_valid_y</th>\n",
        "      <th>room8_valid_y</th>\n",
        "      <th>room9_valid_y</th>\n",
+       "      <th>width_valid</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>8</td>\n",
-       "      <td>8</td>\n",
-       "      <td>31.373657</td>\n",
-       "      <td>14.337158</td>\n",
-       "      <td>7.840942</td>\n",
-       "      <td>6.941162</td>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>38.448303</td>\n",
+       "      <td>14.871094</td>\n",
+       "      <td>8.429260</td>\n",
+       "      <td>5.072388</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.00000</td>\n",
-       "      <td>11.761414</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>12.280518</td>\n",
+       "      <td>...</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>32.382202</td>\n",
+       "      <td>12.814453</td>\n",
+       "      <td>5.472839</td>\n",
+       "      <td>3.737549</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>13.081421</td>\n",
+       "      <td>...</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>9</td>\n",
+       "      <td>9</td>\n",
+       "      <td>34.621765</td>\n",
+       "      <td>15.123230</td>\n",
+       "      <td>7.203186</td>\n",
+       "      <td>3.342041</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>12.280518</td>\n",
        "      <td>...</td>\n",
        "      <td>True</td>\n",
        "      <td>True</td>\n",
@@ -236,7 +285,7 @@
        "      <td>5.210815</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.00000</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>16.334473</td>\n",
        "      <td>...</td>\n",
        "      <td>True</td>\n",
@@ -254,62 +303,14 @@
        "      <th>22</th>\n",
        "      <td>22</td>\n",
        "      <td>22</td>\n",
-       "      <td>33.815918</td>\n",
+       "      <td>33.810974</td>\n",
        "      <td>13.417603</td>\n",
        "      <td>9.769043</td>\n",
        "      <td>6.011719</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.00000</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>11.311523</td>\n",
-       "      <td>...</td>\n",
-       "      <td>True</td>\n",
-       "      <td>True</td>\n",
-       "      <td>True</td>\n",
-       "      <td>True</td>\n",
-       "      <td>True</td>\n",
-       "      <td>True</td>\n",
-       "      <td>True</td>\n",
-       "      <td>True</td>\n",
-       "      <td>True</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>32</th>\n",
-       "      <td>32</td>\n",
-       "      <td>32</td>\n",
-       "      <td>38.626282</td>\n",
-       "      <td>13.842773</td>\n",
-       "      <td>10.441406</td>\n",
-       "      <td>4.538452</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>12.39917</td>\n",
-       "      <td>10.901184</td>\n",
-       "      <td>...</td>\n",
-       "      <td>True</td>\n",
-       "      <td>True</td>\n",
-       "      <td>True</td>\n",
-       "      <td>True</td>\n",
-       "      <td>True</td>\n",
-       "      <td>True</td>\n",
-       "      <td>True</td>\n",
-       "      <td>True</td>\n",
-       "      <td>True</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>53</th>\n",
-       "      <td>53</td>\n",
-       "      <td>53</td>\n",
-       "      <td>51.959839</td>\n",
-       "      <td>19.300781</td>\n",
-       "      <td>7.475098</td>\n",
-       "      <td>8.646790</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.00000</td>\n",
-       "      <td>12.967712</td>\n",
        "      <td>...</td>\n",
        "      <td>True</td>\n",
        "      <td>True</td>\n",
@@ -324,63 +325,63 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 45 columns</p>\n",
+       "<p>5 rows × 46 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
        "    Unnamed: 0_x  Image ID  Room 0 Area (sq. meters)  \\\n",
-       "8              8         8                 31.373657   \n",
+       "2              2         2                 38.448303   \n",
+       "4              4         4                 32.382202   \n",
+       "9              9         9                 34.621765   \n",
        "16            16        16                 27.280151   \n",
-       "22            22        22                 33.815918   \n",
-       "32            32        32                 38.626282   \n",
-       "53            53        53                 51.959839   \n",
+       "22            22        22                 33.810974   \n",
        "\n",
        "    Room 1 Area (sq. meters)  Room 2 Area (sq. meters)  \\\n",
-       "8                  14.337158                  7.840942   \n",
+       "2                  14.871094                  8.429260   \n",
+       "4                  12.814453                  5.472839   \n",
+       "9                  15.123230                  7.203186   \n",
        "16                 17.575378                  6.451721   \n",
        "22                 13.417603                  9.769043   \n",
-       "32                 13.842773                 10.441406   \n",
-       "53                 19.300781                  7.475098   \n",
        "\n",
        "    Room 3 Area (sq. meters)  Room 4 Area (sq. meters)  \\\n",
-       "8                   6.941162                       0.0   \n",
+       "2                   5.072388                       0.0   \n",
+       "4                   3.737549                       0.0   \n",
+       "9                   3.342041                       0.0   \n",
        "16                  5.210815                       0.0   \n",
        "22                  6.011719                       0.0   \n",
-       "32                  4.538452                       0.0   \n",
-       "53                  8.646790                       0.0   \n",
        "\n",
        "    Room 5 Area (sq. meters)  Room 6 Area (sq. meters)  \\\n",
-       "8                        0.0                   0.00000   \n",
-       "16                       0.0                   0.00000   \n",
-       "22                       0.0                   0.00000   \n",
-       "32                       0.0                  12.39917   \n",
-       "53                       0.0                   0.00000   \n",
+       "2                        0.0                       0.0   \n",
+       "4                        0.0                       0.0   \n",
+       "9                        0.0                       0.0   \n",
+       "16                       0.0                       0.0   \n",
+       "22                       0.0                       0.0   \n",
        "\n",
-       "    Room 7 Area (sq. meters)  ...  room0_valid_y  room1_valid_y  \\\n",
-       "8                  11.761414  ...           True           True   \n",
+       "    Room 7 Area (sq. meters)  ...  room1_valid_y  room2_valid_y  \\\n",
+       "2                  12.280518  ...           True           True   \n",
+       "4                  13.081421  ...           True           True   \n",
+       "9                  12.280518  ...           True           True   \n",
        "16                 16.334473  ...           True           True   \n",
        "22                 11.311523  ...           True           True   \n",
-       "32                 10.901184  ...           True           True   \n",
-       "53                 12.967712  ...           True           True   \n",
        "\n",
-       "    room2_valid_y  room3_valid_y  room4_valid_y  room5_valid_y  room6_valid_y  \\\n",
-       "8            True           True           True           True           True   \n",
+       "    room3_valid_y  room4_valid_y  room5_valid_y  room6_valid_y  room7_valid_y  \\\n",
+       "2            True           True           True           True           True   \n",
+       "4            True           True           True           True           True   \n",
+       "9            True           True           True           True           True   \n",
        "16           True           True           True           True           True   \n",
        "22           True           True           True           True           True   \n",
-       "32           True           True           True           True           True   \n",
-       "53           True           True           True           True           True   \n",
        "\n",
-       "    room7_valid_y  room8_valid_y  room9_valid_y  \n",
-       "8            True           True           True  \n",
-       "16           True           True           True  \n",
-       "22           True           True           True  \n",
-       "32           True           True           True  \n",
-       "53           True           True           True  \n",
+       "    room8_valid_y  room9_valid_y  width_valid  \n",
+       "2            True           True         True  \n",
+       "4            True           True         True  \n",
+       "9            True           True         True  \n",
+       "16           True           True         True  \n",
+       "22           True           True         True  \n",
        "\n",
-       "[5 rows x 45 columns]"
+       "[5 rows x 46 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -393,22 +394,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(12424, 45)"
+       "(13315, 46)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "filtered_df.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "filtered_df.to_csv('Updated Filtered Layouts.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "filtered_plans=list(filtered_df['Image ID'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.save('ValidRoomIndices.npy',filtered_plans)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([    2,     4,     9, ..., 80747, 80779, 80782])"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.load(\"ValidRoomIndices.npy\",allow_pickle=True)"
    ]
   }
  ],
@@ -428,7 +476,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.11.3"
   },
   "orig_nbformat": 4
  },
